# jervis

./: .ai_deps_env_setup_run.sh  .ai_deps_setup.sh  .ai_deps_setup_exec.sh  .ai_deps_temp_setup.sh  .ai_temp_dep_setup.sh  .ai_temp_install_deps.sh  .aiassistant_env_setup.sh  .deps_install.sh  .dockerignore  .gitignore  .joernignore  .mcp.json  .output.txt  A2A_AGENT_CARD_FIX_SUMMARY.md  BUG_REPORT_RPC_RECONNECT.md  BUILD.md  CHANGES_2025_01_19.md  CLAUDE.md  DESIGN_RAG_METADATA.md  Dockerfile  Dockerfile.legacy  INTELLIJ_SETUP.md  MOBILE_BUILD.md  MULTI_PROJECT_SETUP.md  Makefile  OVERNIGHT-WORK.md  PLANNER_OPTIMIZATION_SUMMARY.md  README.md  README_BUILD.md  REMOVE_A2A_PLAN.txt  REVERT_TO_NON_A2A.md  SOLUTION_SUMMARY.md  SUMMARY.md  TASK-ROADMAP.md  VERIFICATION_LOG.md  build-docker-images.sh  build.gradle.kts  constraints.txt  czech_to_english_replacements.txt  deps.txt  (+16 more)
backend/service-correction/: Dockerfile  pyproject.toml  requirements.txt
backend/service-correction/app/: __init__.py  agent.py  config.py  grpc_server.py  grpc_server_client.py  main.py
backend/service-document-extraction/: Dockerfile  pyproject.toml  requirements.txt
backend/service-document-extraction/app/: config.py  grpc_server.py  main.py
backend/service-document-extraction/app/services/: extractor.py
backend/service-joern-mcp/: pyproject.toml  requirements.txt  server.py
backend/service-mcp/: Dockerfile  pyproject.toml  requirements.txt
backend/service-mcp/app/: config.py  db.py  grpc_clients.py  main.py  o365_gateway_client.py  oauth_provider.py  orchestrator_client.py
backend/service-o365-browser-pool/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/service-o365-browser-pool/app/: agent_registry.py  ai_login.py  ai_navigator.py  auto_login.py  browser_manager.py  config.py  context_store.py  grpc_clients.py  grpc_server.py  health_loop.py  kotlin_callback.py  main.py  meeting_recorder.py  models.py  pod_state.py  scrape_storage.py  screen_scraper.py  session_monitor.py  tab_manager.py  teams_crawler.py  token_extractor.py  vlm_client.py  vnc_auth.py  vnc_proxy.py
backend/service-o365-browser-pool/app/agent/: _dom_query.py  context.py  executor.py  goals.py  graph.py  llm.py  observer.py  persistence.py  pod_agent.py  prompts.py  reasoner.py  runner.py  state.py  tools.py  watcher.py  work_hours.py
backend/service-o365-browser-pool/app/routes/: graph_proxy.py  health.py  instruction.py  meeting.py  scrape.py  session.py  token.py  vnc_auth.py
backend/service-ollama-router/: Dockerfile  build.gradle.kts  pyproject.toml  requirements.txt
backend/service-ollama-router/.python-archive/app/: client_tier_cache.py  gpu_state.py  grpc_server.py  grpc_server_client.py  metrics.py  models.py  openrouter_catalog.py  openrouter_proxy.py  proxy.py
backend/service-ollama-router/app/: config.py  gpu_state.py  grpc_server.py  grpc_server_client.py  main.py  models.py  openrouter_catalog.py  openrouter_proxy.py  proxy.py  rate_limiter.py  request_queue.py  router_core.py
backend/service-orchestrator/: Dockerfile  pyproject.toml  requirements.txt
backend/service-orchestrator/app/: agent_task_watcher.py  config.py  document_extraction_client.py  grpc_server.py  grpc_server_client.py  logging_utils.py  main.py  models.py  o365_gateway_client.py
backend/service-orchestrator/app/agent/: artifact_graph.py  chat_router.py  decomposer.py  gemini_decomposer.py  graph.py  impact.py  langgraph_runner.py  models.py  next_step_resolver.py  persistence.py  progress.py  proposal_service.py  question_router.py  sse_handler.py  tool_sets.py  validation.py  vertex_executor.py
backend/service-orchestrator/app/agents/: __init__.py  agent_job_watcher.py  agent_pool.py  base.py  companion_budget.py  companion_runner.py  job_runner.py  legacy_agent.py  registry.py  workspace_manager.py
backend/service-orchestrator/app/background/: escalation.py  handler.py  tools.py
backend/service-orchestrator/app/calendar/: calendar_integration.py
backend/service-orchestrator/app/chat/: __init__.py  chat_decomposer.py  context.py  drift.py  hallucination_guard.py  handler.py  handler_agentic.py  handler_context.py  handler_decompose.py  handler_fact_check.py  handler_streaming.py  handler_tools.py  intent.py  intent_decomposer.py  intent_router.py  models.py  multi_context.py  router.py  source_attribution.py  system_prompt.py  thinking_graph.py  thinking_map.py  tools.py  topic_tracker.py  work_plan_draft.py
backend/service-orchestrator/app/companion/: __init__.py  routes.py
backend/service-orchestrator/app/context/: __init__.py  agent_result_parser.py  chat_context_assembler.py  context_assembler.py  context_store.py  distributed_lock.py  guidelines_resolver.py  procedural_memory.py  retention_policy.py  session_memory.py  summarizer.py
backend/service-orchestrator/app/graph/: dag_executor.py  nodes.py  orchestrator.py
backend/service-orchestrator/app/graph_agent/: __init__.py  (+12 more)
backend/service-orchestrator/tests/: conftest.py  test_hardening.py
backend/service-tts/: .gitignore  Dockerfile  Dockerfile.gpu  README.md  download_tts_model.py  edge_tts_server.py  pyproject.toml  requirements.txt  tts_server.py  xtts_server.py
backend/service-tts/app/: __main__.py  download_tts_model.py  grpc_server.py  normalizer.py  router_normalize.py  router_preempt.py  rules_client.py  tts_server.py  xtts_server.py
backend/service-visual-capture/: Dockerfile  pyproject.toml  requirements.txt
backend/service-visual-capture/app/: capture.py  config.py  grpc_clients.py  grpc_server.py  main.py  onvif_client.py  vlm_client.py
backend/service-whatsapp-browser/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/service-whatsapp-browser/app/: browser_manager.py  config.py  grpc_clients.py  grpc_server.py  kotlin_callback.py  main.py  models.py  scrape_storage.py  screen_scraper.py  session_monitor.py  vlm_client.py  vnc_auth.py  vnc_proxy.py
libs/jervis_contracts/: README.md  pyproject.toml
libs/jervis_contracts/jervis_contracts/: __init__.py  grpc_options.py  kb_client.py
(+4384 files in other folders)
