[project]
name = "jervis-correction"
version = "0.1.0"
description = "Jervis transcript correction / text normalization service. (Kotlin migration candidate)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "httpx>=0.27.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
