[project]
name = "jervis-document-extraction"
version = "0.1.0"
description = "Jervis document extraction — Office / HTML / EPUB / archives. (Kotlin+Apache Tika migration candidate)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "mammoth>=1.8.0",
    "odfpy>=1.4.0",
    "striprtf>=0.0.26",
    "extract-msg>=0.50.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "ebooklib>=0.18",
    "rarfile>=4.2",
    "py7zr>=0.22.0",
    "prometheus-client>=0.21.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
