[project]
name = "jervis-joern-mcp"
version = "0.1.0"
description = "Jervis Joern MCP stdio bridge — K8s Job dispatcher for Joern CPG analysis."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "kubernetes>=31.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
