[project]
name = "jervis-o365-browser-pool"
version = "0.1.0"
description = "Jervis O365 browser pool — Teams/Office scraping via LangGraph + Playwright."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "aiohttp>=3.10.0",
    "motor>=3.6.0",
    "wsproto>=1.2.0",
    "websockets>=13.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-mongodb>=0.3.0",
    "langchain-core>=0.3.0",
    "pymongo>=4.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
