[project]
name = "jervis-visual-capture"
version = "0.1.0"
description = "Jervis visual capture — ONVIF cameras + OpenCV. (Stays Python — OpenCV/ML)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "opencv-python-headless>=4.9.0",
    "onvif-zeep>=0.2.12",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
