[project]
name = "jervis-whatsapp-browser"
version = "0.1.0"
description = "Jervis WhatsApp Web scraper via Playwright. (Kotlin+Playwright-Java migration candidate)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "aiohttp>=3.10.0",
    "motor>=3.6.0",
    "wsproto>=1.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
